day07 solved and tree implemented

--- a/2022/.vscode/settings.json
+++ b/2022/.vscode/settings.json
@@ -80,6 +80,9 @@
         "memory_resource": "cpp",
         "utility": "cpp",
         "stop_token": "cpp",
-        "cinttypes": "cpp"
+        "cinttypes": "cpp",
+        "*.inc": "cpp",
+        "filesystem": "cpp",
+        "version": "cpp"
     }
 }
