--- a/2022/.vscode/settings.json
+++ b/2022/.vscode/settings.json
@@ -83,6 +83,8 @@
         "cinttypes": "cpp",
         "*.inc": "cpp",
         "filesystem": "cpp",
-        "version": "cpp"
+        "version": "cpp",
+        "__tree": "cpp",
+        "set": "cpp"
     }
 }
